[tool.poetry]
name = "sorting and searching algorithms"
version = "0.3.0"
description = "Implementation of classical sorting and searching algorithms"
authors = ["Denis <Dysprosium92@ya.ru>"]
readme = "README.md"
repository = "https://github.com/dosart/sorting_and_searching"
packages = [
    { include = "algorithms" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
